<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/bottom_menu_main_24"
        android:title="@string/frgmnt_main" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/bottom_menu_24"
        android:title="@string/frgmnt_main_menu" />

    <item
        android:id="@+id/navigation_akcii"
        android:icon="@drawable/bottom_menu_akcii_24"
        android:title="@string/frgmnt_main_akcii" />
    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/bottom_menu_orders_24"
        android:title="@string/frgmnt_main_orders" />
    <item
        android:id="@+id/navigation_delivery"
        android:icon="@drawable/profile_menu_person_24"
        android:title="@string/frgmnt_main_delivery" />

</menu>