<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:fitsSystemWindows="true"
    tools:context=".ProfileMainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="@dimen/heigt_width_110"
                    android:layout_height="@dimen/heigt_width_110"
                    android:layout_marginTop="@dimen/margin_89"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/notphoto"
                    app:layout_collapseMode="parallax"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.MyApp.LargeComponent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_17"
                    android:text="@string/profile_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_26" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:text="@string/profile_main_card_name"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_22" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_32"
                    android:text="@string/profile_main_skidka"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_size_22" />


            </androidx.appcompat.widget.LinearLayoutCompat>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/profile_name_ab_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/menu_left_24">

                </com.google.android.material.appbar.MaterialToolbar>
            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/nested_scroll"
        layout="@layout/profile_menu" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>